--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection":"Data Source=datingapp.db"
   },
+  "TokenKey":"RandomlyGeneratedUnGuessableKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
